fix: map size on small screens

--- a/travel-app/src/components/App/App.module.css
+++ b/travel-app/src/components/App/App.module.css
@@ -28,7 +28,7 @@
   flex-direction: column;
 }
 
-@media screen and (max-height: 630px) {
+@media screen and (max-height: 520px) {
   .app {
     height: 100%;
   }
